@@ -1,18 +1,19 @@
 package cuchaz.enigma.network.packet;
 
+import cuchaz.enigma.translation.mapping.EntryMapping;
+import cuchaz.enigma.translation.mapping.tree.EntryTree;
+import cuchaz.enigma.translation.mapping.tree.EntryTreeNode;
+import cuchaz.enigma.translation.mapping.tree.HashEntryTree;
+import cuchaz.enigma.network.ClientPacketHandler;
+import cuchaz.enigma.network.EnigmaServer;
+import cuchaz.enigma.translation.representation.entry.Entry;
+
 import java.io.DataInput;
 import java.io.DataOutput;
 import java.io.IOException;
 import java.util.Collection;
 import java.util.List;
-
-import cuchaz.enigma.network.ClientPacketHandler;
-import cuchaz.enigma.network.EnigmaServer;
-import cuchaz.enigma.translation.mapping.EntryMapping;
-import cuchaz.enigma.translation.mapping.tree.EntryTree;
-import cuchaz.enigma.translation.mapping.tree.EntryTreeNode;
-import cuchaz.enigma.translation.mapping.tree.HashEntryTree;
-import cuchaz.enigma.translation.representation.entry.Entry;
+import java.util.stream.Collectors;
 
 public class SyncMappingsS2CPacket implements Packet<ClientPacketHandler> {
 	private EntryTree<EntryMapping> mappings;
@@ -35,9 +36,16 @@ public class SyncMappingsS2CPacket implements Packet<ClientPacketHandler> {
 
 	private void readEntryTreeNode(DataInput input, Entry<?> parent) throws IOException {
 		Entry<?> entry = PacketHelper.readEntry(input, parent, false);
-		String name = PacketHelper.readString(input);
-		String javadoc = PacketHelper.readString(input);
-		EntryMapping mapping = new EntryMapping(!name.isEmpty() ? name : null, !javadoc.isEmpty() ? javadoc : null);
+		EntryMapping mapping = null;
+		if (input.readBoolean()) {
+			String name = input.readUTF();
+			if (input.readBoolean()) {
+				String javadoc = input.readUTF();
+				mapping = new EntryMapping(name, javadoc);
+			} else {
+				mapping = new EntryMapping(name);
+			}
+		}
 		mappings.insert(entry, mapping);
 		int size = input.readUnsignedShort();
 		for (int i = 0; i < size; i++) {
@@ -47,7 +55,7 @@ public class SyncMappingsS2CPacket implements Packet<ClientPacketHandler> {
 
 	@Override
 	public void write(DataOutput output) throws IOException {
-		List<EntryTreeNode<EntryMapping>> roots = mappings.getRootNodes().toList();
+		List<EntryTreeNode<EntryMapping>> roots = mappings.getRootNodes().collect(Collectors.toList());
 		output.writeInt(roots.size());
 		for (EntryTreeNode<EntryMapping> node : roots) {
 			writeEntryTreeNode(output, node);
@@ -57,10 +65,14 @@ public class SyncMappingsS2CPacket implements Packet<ClientPacketHandler> {
 	private static void writeEntryTreeNode(DataOutput output, EntryTreeNode<EntryMapping> node) throws IOException {
 		PacketHelper.writeEntry(output, node.getEntry(), false);
 		EntryMapping value = node.getValue();
-		if (value == null) value = EntryMapping.DEFAULT;
-
-		PacketHelper.writeString(output, value.targetName() != null ? value.targetName() : "");
-		PacketHelper.writeString(output, value.javadoc() != null ? value.javadoc() : "");
+		output.writeBoolean(value != null);
+		if (value != null) {
+			PacketHelper.writeString(output, value.getTargetName());
+			output.writeBoolean(value.getJavadoc() != null);
+			if (value.getJavadoc() != null) {
+				PacketHelper.writeString(output, value.getJavadoc());
+			}
+		}
 		Collection<? extends EntryTreeNode<EntryMapping>> children = node.getChildNodes();
 		output.writeShort(children.size());
 		for (EntryTreeNode<EntryMapping> child : children) {
