@@ -1,9 +1,6 @@
 package cuchaz.enigma.translation.mapping;
 
-import java.util.*;
-
-import javax.annotation.Nullable;
-
+import com.google.common.collect.Sets;
 import cuchaz.enigma.analysis.IndexTreeBuilder;
 import cuchaz.enigma.analysis.MethodImplementationsTreeNode;
 import cuchaz.enigma.analysis.MethodInheritanceTreeNode;
@@ -16,6 +13,10 @@ import cuchaz.enigma.translation.representation.AccessFlags;
 import cuchaz.enigma.translation.representation.entry.ClassEntry;
 import cuchaz.enigma.translation.representation.entry.Entry;
 import cuchaz.enigma.translation.representation.entry.MethodEntry;
+
+import javax.annotation.Nullable;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class IndexEntryResolver implements EntryResolver {
 	private final EntryIndex entryIndex;
@@ -53,7 +54,7 @@ public class IndexEntryResolver implements EntryResolver {
 				if (!resolvedChildren.isEmpty()) {
 					return resolvedChildren.stream()
 							.map(resolvedChild -> (E) entry.replaceAncestor(classChild, resolvedChild))
-							.toList();
+							.collect(Collectors.toList());
 				}
 			}
 		}
@@ -155,23 +156,18 @@ public class IndexEntryResolver implements EntryResolver {
 
 	@Override
 	public Set<MethodEntry> resolveEquivalentMethods(MethodEntry methodEntry) {
-		Set<MethodEntry> set = new HashSet<>();
-		resolveEquivalentMethods(set, methodEntry);
-		return set;
-	}
-
-	private void resolveEquivalentMethods(Set<MethodEntry> methodEntries, MethodEntry methodEntry) {
 		AccessFlags access = entryIndex.getMethodAccess(methodEntry);
 		if (access == null) {
 			throw new IllegalArgumentException("Could not find method " + methodEntry);
 		}
 
 		if (!canInherit(methodEntry, access)) {
-			methodEntries.add(methodEntry);
-			return;
+			return Collections.singleton(methodEntry);
 		}
 
+		Set<MethodEntry> methodEntries = Sets.newHashSet();
 		resolveEquivalentMethods(methodEntries, treeBuilder.buildMethodInheritance(VoidTranslator.INSTANCE, methodEntry));
+		return methodEntries;
 	}
 
 	private void resolveEquivalentMethods(Set<MethodEntry> methodEntries, MethodInheritanceTreeNode node) {
@@ -189,7 +185,7 @@ public class IndexEntryResolver implements EntryResolver {
 		// look at bridge methods!
 		MethodEntry bridgedMethod = bridgeMethodIndex.getBridgeFromSpecialized(methodEntry);
 		while (bridgedMethod != null) {
-			resolveEquivalentMethods(methodEntries, bridgedMethod);
+			methodEntries.addAll(resolveEquivalentMethods(bridgedMethod));
 			bridgedMethod = bridgeMethodIndex.getBridgeFromSpecialized(bridgedMethod);
 		}
 
@@ -215,7 +211,7 @@ public class IndexEntryResolver implements EntryResolver {
 		// look at bridge methods!
 		MethodEntry bridgedMethod = bridgeMethodIndex.getBridgeFromSpecialized(methodEntry);
 		while (bridgedMethod != null) {
-			resolveEquivalentMethods(methodEntries, bridgedMethod);
+			methodEntries.addAll(resolveEquivalentMethods(bridgedMethod));
 			bridgedMethod = bridgeMethodIndex.getBridgeFromSpecialized(bridgedMethod);
 		}
 
